--- a/webtronics/schematic.css
+++ b/webtronics/schematic.css
@@ -57,7 +57,7 @@ border:1px solid black;
   top:10px; 
   border-style: solid; 
   background-color:#c0c0c0; 
-	padding: 5px;"   
+	padding: 5px;   
    }   
    
 #webtronics_chips_box{
