--- a/webtronics/schematic.css
+++ b/webtronics/schematic.css
@@ -12,11 +12,13 @@ div img {
 	padding:2px;
 	border:2px solid grey;
 	}
-
+#webtronics_main_window{
+	background-color:#C0C0C0;
+}
 #webtronics_toolbar{
 	width:auto;
 	height:auto;
-	background-color:#C0C0C0;
+	background-color:inherit;
 	}
 
 #webtronics_diagram_area{
@@ -26,12 +28,13 @@ overflow:scroll;
 cursor:crosshair;
 position:relative;
 border:1px solid black;
+background-color:#ffffff;
 }
 
 #webtronics_status_bar{
  width:auto;
  height:auto ;
- background-color:#c0c0c0;
+ background-color:inherit;
  }
  
 #webtronics_parts_box{
@@ -40,7 +43,7 @@ border:1px solid black;
       left:200px; 
       top:10px; 
       border-style: solid; 
-      background-color:#c0c0c0; 
+      background-color:inherit; 
       padding: 5px;
       }
 #webtronics_part_display{
@@ -56,7 +59,7 @@ border:1px solid black;
   left:200px; 
   top:10px; 
   border-style: solid; 
-  background-color:#c0c0c0; 
+  background-color:inherit; 
 	padding: 5px;   
    }   
    
@@ -66,7 +69,7 @@ border:1px solid black;
   left:200px; 
   top:10px; 
   border-style: solid; 
-  background-color:#c0c0c0; 
+  background-color:inherit; 
   padding: 5px;
   }
   
@@ -83,7 +86,7 @@ background-color:#ffffff
   left:200px; 
   top:10px; 
   border-style: solid; 
-  background-color:#c0c0c0; 
+  background-color:inherit; 
   padding: 5px;      
 }
 #webtronics_open_text{ 
@@ -92,7 +95,7 @@ background-color:#ffffff
   left:200px; 
   top:10px; 
   border-style: solid; 
-  background-color:#c0c0c0; 
+  background-color:inherit; 
   padding: 5px;
   }
   
