fixed selection rect

--- a/webtronics/schematic.css
+++ b/webtronics/schematic.css
@@ -12,6 +12,14 @@ div img {
 	padding:2px;
 	border:2px solid grey;
 	}
+
+@color-profile{}
+
+
+
+
+
+
 #webtronics_main_window{
 	background-color:#C0C0C0;
 }
