changed wire routing

--- a/webtronics/schematic.css
+++ b/webtronics/schematic.css
@@ -25,11 +25,11 @@ div img {
 	height:auto;
 	background-color:inherit;
 	}
-
+/*
 #webtronics_settings{
 	float:right;
 }
-
+*/
 
 #webtronics_diagram_area{	
 	width:auto;
