--- a/webtronics/schematic.css
+++ b/webtronics/schematic.css
@@ -2,21 +2,38 @@
 
 div * {vertical-align: middle;}
 
-div img {
+.normal_button {
 	padding:2px;
-	border:2px solid grey;
+	border-style:solid;
+	border-width:2px;
+	border-color:black;
+	background-color:#009900;
+	}
+
+.pressed_button {
+	padding:2px;
+	border-style:solid;
+	border-width:2px;
+	border-color:#009900;
+	background-color:#006600;
 	}
 
 
 #webtronics_main_window{
 	font-family:verdana,arial;
 	font-size:10pt;
-	background-color:#C0C0C0;
+	background-color:#009900;
+	border:2px solid #009900;
+
 }
 
 #webtronics_toolbar{
 	height:40px;
+	border-style:solid;
+	border-width:2px;
+	border-color:#009900;
 	}
+
 
 #webtronics_buttons{
 	float:left;
@@ -38,11 +55,12 @@ div img {
 	vertical-align: middle;
 	width:auto;
 	height:auto;
-	overflow:scroll;
+	/*overflow:scroll;*/
+	overflow:hidden;
 	cursor:crosshair;
 	position:relative;
 	border:1px solid black;
-	background-color:#ffffff;
+	background-color:blue;
 	
 }
 
