--- a/webtronics/schematic.css
+++ b/webtronics/schematic.css
@@ -79,11 +79,15 @@ div#webtronics_parts_list *{
 	-ms-user-select:none;
 }
 
-
+fieldset {
+	float:left;
+	margin:0px;
+	padding:0px;
+}
 
 
 div#webtronics_toolbar{
-	height:40px;
+	height:60px;
 	width:100%;
 	border-style:solid;
 	border-width:2px;
@@ -107,7 +111,6 @@ div#webtronics_buttons{
 div#webtronics_settings{
 	float:left;
 	height:40px;
-	
 }
 
 /*
@@ -192,12 +195,19 @@ div#webtronics_open_text{
 	width:100%;
 	height:132px;
 	background-color:#ffffff;
-
+	border:1px solid black;
 	-moz-user-select:none;
 	-webkit-user-select:none;
 	-ms-user-select:none;
 
 }
+
+.inv *{
+	fill:black;
+	stroke:white;
+}
+
+
 #webtronics_part_display>svg{
 /*
 	-moz-user-select:all;
