--- a/webtronics/schematic.css
+++ b/webtronics/schematic.css
@@ -14,6 +14,15 @@
 	background-color:#bfbfbf;
 	}
 
+.normal_button:hover{
+	padding:2px;
+	border-style:solid;
+	border-width:2px;
+	border-color:#black;
+	background-color:#ffffff;
+}
+
+
 
 div#webtronics_main_window{
 
@@ -70,6 +79,10 @@ div#webtronics_parts_list>div{
 	border-style:solid;
 	border-width:2px;
 	border-color:black;
+}
+
+div#webtronics_parts_list>div>p:hover{
+	background-color:#ffffff;
 }
 
 div#webtronics_parts_list *{
@@ -192,19 +205,23 @@ div#webtronics_open_text{
 }
 
 #webtronics_part_display{
-	width:100%;
-	height:132px;
+	width:126px;
+	height:130px;
 	background-color:#ffffff;
-	border:1px solid black;
+	border:2px solid black;
 	-moz-user-select:none;
 	-webkit-user-select:none;
 	-ms-user-select:none;
 
 }
 
-.inv *{
+.inv g,.inv rect,.inv line{
 	fill:black;
 	stroke:white;
+}
+
+.inv text{
+	fill:white;
 }
 
 
