--- a/webtronics/style/schematic.css
+++ b/webtronics/style/schematic.css
@@ -48,9 +48,11 @@
 	border-width:2px;
 	border-color:black;
 	background-color:#e7e7e7;
+    cursor:pointer;
 }
 .webtronics_menu>p:hover{
 	background-color:#ffffff;
+    
 }
 
 
@@ -229,8 +231,23 @@ div.modal{
 	background-color:inherit; 
 	padding: 5px;
 }
-
+#webtronics_image{
+	width:300px;
+	height:300px;
+	border:1px solid black;
+	background-color:#e7e7e7;
+    overflow:hide;
+}
 /*display areas*/
+
+#webtronics_image_div{
+	width:100%;
+	height:80%;
+	border:1px solid black;
+	background-color:#e7e7e7;
+    overflow:auto;
+}
+
 
 #webtronics_diagram_area {	
     position:relative;
@@ -258,11 +275,12 @@ div.modal{
 
 
 
+
 #webtronics_chip_display{
 	width:300px;
 	height:300px;
 	border:1px solid black;
-	background-color:#ffffff
+	background-color:#ffffff;
   } 
 
 
@@ -277,7 +295,7 @@ div#webtronics_status_bar{
 	-ms-user-select:none;
 }
 div#webtronics_disable{
-
+    visibility:hidden;
 	position:absolute;
 	left:0;
 	top:0;
