--- a/webtronics/style/schematic.css
+++ b/webtronics/style/schematic.css
@@ -231,6 +231,15 @@ div.modal{
 	background-color:inherit; 
 	padding: 5px;
 }
+
+#webtronics_netlist_text_div{
+	width:300px;
+	height:300px;
+	border:1px solid black;
+	background-color:#ffffff;
+    overflow:auto;
+}
+
 #webtronics_image{
 	width:300px;
 	height:300px;
