--- a/webtronics/style/schematic.css
+++ b/webtronics/style/schematic.css
@@ -231,7 +231,13 @@ div.modal{
 	background-color:inherit; 
 	padding: 5px;
 }
+#webtronics_chips_box>*{
+float:left;
+}
 
+#webtronics_netlist_text>*{
+float:left;
+}
 #webtronics_netlist_text_div{
 	width:300px;
 	height:300px;
@@ -289,10 +295,9 @@ div.modal{
 
 
 
-
 #webtronics_chip_display{
-	width:300px;
-	height:300px;
+	width:200px;
+	height:200px;
 	border:1px solid black;
 	background-color:#ffffff;
     overflow: auto;
