--- a/webtronics/style/schematic.css
+++ b/webtronics/style/schematic.css
@@ -66,7 +66,7 @@ div#webtronics_main_window{
 
 }
 
-iframe{
+#webtronics_diagram_area>iframe{
     position:absolute;
     overflow:hidden;
     height:100%;
@@ -361,14 +361,19 @@ div#webtronics_context_menu .enabled:hover{
     color:#ffffff;
 }
 
-div#webtronics_scope_display_iframe{
-   width:80%;
-   height:90%;
-  position:absolute;
+#webtronics_scope_display>*{
+float:left;
 }
+
+div#webtronics_scope_display_div{
+  width:90%;
+  height:95%;
+  overflow: hide;
+}
+
 div#webtronics_scope_display{
-   width:380px;
-   height:260px;
-  overflow: hidden;
+  width:400px;
+  height:280px;
+  overflow: hide;
 }
 
